--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.0",
     "aos": "^2.3.4",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "hamburger-react": "^2.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "swiper": "^12.0.3",
     "vite-plugin-svgr": "^4.5.0"
